# CryptoTradeBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml  shell-sample.heic
.github/actions/setup-python-dev/: action.yml
.github/workflows/: ci.yml  docker-validation.yml  package-validation.yml  quality.yml  release.yml
config/: settings.yaml
docs/: README.md  architecture.md  cli.md  commands.md  data.md  operations.md  release-checklist.md  roadmap.md  runbooks.md  shell-commands.md  specification.md  strategy.md  testing-and-quality.md
docs/releases/: v0.2.0.md
src/spotbot/: __main__.py  cli.py  config.py  constants.py  logging_config.py  runtime.py
src/spotbot/data/: __init__.py  aggregation.py  clients.py  integrity.py  service.py  storage.py  symbols.py
src/spotbot/research/: __init__.py  features.py  service.py
src/tradebot/: __init__.py  __main__.py  cancellation.py  cli.py  commanding.py  config.py  logging_config.py  runtime.py  shell.py
src/tradebot/backtest/: __init__.py  execution.py  models.py  service.py  storage.py  strategy.py
src/tradebot/data/: aggregation.py  clients.py  integrity.py  models.py  service.py  storage.py  symbols.py
src/tradebot/execution/: __init__.py  kraken.py  models.py  service.py  storage.py
src/tradebot/model/: __init__.py  models.py  service.py  storage.py
src/tradebot/operations/: __init__.py  alerts.py  service.py  storage.py
src/tradebot/research/: __init__.py  experiments.py  features.py  models.py  service.py  storage.py
src/tradebot/strategy/: __init__.py  models.py  service.py
tests/: __init__.py
tests/fixtures/raw/kraken/: ETHUSD.csv  XBTUSD.csv
tests/integration/: test_cli_basics.py  test_cli_operations.py  test_console_entrypoint.py  test_package_build.py  test_release_readiness.py  test_shell_app.py
tests/integration/backtest/: __init__.py  test_backtest_cli.py
tests/integration/data/: __init__.py  test_data_cli.py
tests/integration/model/: __init__.py  test_model_cli.py
tests/integration/research/: test_features_cli.py  test_sweep_cli.py
tests/unit/: test_config.py  test_logging_config.py  test_runtime.py
tests/unit/backtest/: __init__.py  test_execution.py  test_service.py  test_strategy.py
tests/unit/data/: __init__.py  test_aggregation.py  test_clients.py  test_integrity.py  test_service.py
tests/unit/execution/: __init__.py  test_kraken.py  test_service.py
tests/unit/model/: __init__.py  test_service.py
tests/unit/operations/: test_alerts.py
tests/unit/research/: test_experiments.py  test_research_service.py
tests/unit/strategy/: __init__.py  test_service.py
