[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "crypto-spot-trading-bot"
version = "0.1.0"
description = "CLI-first Kraken spot trading bot with hybrid rule-based and ML-driven decision support."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "Rain Zhang" }
]
dependencies = [
  "httpx>=0.28,<0.29",
  "pydantic>=2.11,<3.0",
  "python-dotenv>=1.1,<2.0",
  "python-json-logger>=2.0.7,<4.0",
  "pyyaml>=6.0.2,<7.0",
  "scikit-learn>=1.7,<2.0",
  "textual>=0.76,<1.0",
  "typer>=0.16,<1.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2.0",
  "mypy>=1.16,<2.0",
  "pytest>=8.4,<9.0",
  "pytest-cov>=6.2,<7.0",
  "ruff>=0.12,<0.13",
  "types-PyYAML>=6.0.12,<7.0"
]

[project.scripts]
tradebot = "tradebot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tradebot"]

[tool.pytest.ini_options]
addopts = "--cov=tradebot --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tradebot"]

[tool.coverage.report]
fail_under = 80
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
packages = ["tradebot"]
strict = true
warn_unused_configs = true
